Use fully qualified names in tasks

--- a/tasks/arch.yml
+++ b/tasks/arch.yml
@@ -38,7 +38,7 @@
 
 - name: Allow 'wheel' group to have passwordless sudo
   become: true
-  lineinfile:
+  ansible.builtin.lineinfile:
     dest: /etc/sudoers
     state: present
     regexp: "^%wheel"
