--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -1,59 +1,59 @@
 ---
 - name: Run the equivalent of "apt-get update" as a separate step
   become: true
-  apt:
+  ansible.builtin.apt:
     update_cache: true
 
 - name: Update all packages to their latest version
   become: true
-  apt:
+  ansible.builtin.apt:
     name: "*"
     state: latest
 
 - name: Upgrade the OS (apt-get dist-upgrade)
   become: true
-  apt:
+  ansible.builtin.apt:
     upgrade: dist
 
 - name: Install VIM
   become: true
-  apt:
+  ansible.builtin.apt:
     name: vim
     state: present
 
 - name: Install Git
   become: true
-  apt:
+  ansible.builtin.apt:
     name: git
     state: present
 
 - name: Install Fish
   become: true
-  apt:
+  ansible.builtin.apt:
     name: fish
     state: present
 
 - name: Install NeoFetch
   become: true
-  apt:
+  ansible.builtin.apt:
     name: neofetch
     state: present
   ignore_errors: true
 
 - name: Install iSCSI
   become: true
-  apt:
+  ansible.builtin.apt:
     name: open-iscsi
     state: present
 
 - name: Remove dependencies that are no longer required
   become: true
-  apt:
+  ansible.builtin.apt:
     autoremove: true
 
 - name: Allow 'sudo' group to have passwordless sudo
   become: true
-  lineinfile:
+  ansible.builtin.lineinfile:
     dest: /etc/sudoers
     state: present
     regexp: "^%sudo"
