--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -31,4 +31,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run test playbook
-        run: ansible-lint ./
+        run: ansible-lint -c ./.ansible-lint --exclude meta/ ./
