--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v2
 
-      - name: Run test playbook
-        run: ansible-lint -c ./.ansible-lint --exclude meta/ ./
+      - name: Run Ansible Lint
+        run: ansible-lint -c ./.ansible-lint --exclude meta/ .
